kubernetes_example/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: clamav-rest
  labels:
    name: clamav-rest
