kubernetes_example/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: clamav-rest-service
  namespace: clamav-rest
spec:
  ports:
  - name: http
    port: 9000
    targetPort: http
  - name: https
    port: 9443
    targetPort: https
  selector:
    app: clamav-rest-service
